--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta charset="UTF-8">
     <meta property="og:image" content="https://cubeupload.com/im/racimpog/TRUEharlow.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://drive.google.com/file/d/1K-4CHV3m-TOfqplGguYBz5I0EJLOKsC3/view?usp=sharing">
+    <meta property="og:video:url" content="https://github.com/RacimPog/sou/raw/main/story%20of%20undertale%20(2).mp4">
     <meta property="og:video:width" content="176">
     <meta property="og:video:height" content="144">
 </head>
