--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 -->
 <head>
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://cubeupload.com/im/racimpog/TRUEharlow.gif">
+    <meta property="og:image" content="https://github.com/RacimPog/sou/blob/main/TRUEharlow.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://github.com/RacimPog/sou/raw/main/story%20of%20undertale%20(2).mp4">
+    <meta property="og:video:url" content="https://github.com/RacimPog/sou/blob/main/story%20of%20undertale%20(2).mp4">
     <meta property="og:video:width" content="176">
     <meta property="og:video:height" content="144">
 </head>
