--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta charset="UTF-8">
     <meta property="og:image" content="https://github.com/RacimPog/sou/blob/main/TRUEharlow.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://github.com/RacimPog/sou/blob/main/story%20of%20undertale%20(2).mp4">
-    <meta property="og:video:width" content="176">
-    <meta property="og:video:height" content="144">
+    <meta property="og:video:url" content="https://www.youtube.com/embed/MobkO51msMI?si=SuGQeFSKfsUfUR-E">
+    <meta property="og:video:width" content="240">
+    <meta property="og:video:height" content="188">
 </head>
 <body>jreg pen</body>
 </html>
