--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
     <meta property="og:video:width" content="240">
     <meta property="og:video:height" content="188">
 </head>
-<body>jreg pen</body>
+<body>jreg peni</body>
 </html>
