--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta charset="UTF-8">
     <meta property="og:image" content="https://github.com/RacimPog/sou/blob/main/TRUEharlow.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://github.com/RacimPog/sou/blob/main/story%20of%20undertale.mp4">
-    <meta property="og:video:width" content="240">
-    <meta property="og:video:height" content="188">
+    <meta property="og:video:url" content="https://www.youtube.com/embed/MobkO51msMI?si=8Nw7svrVCzr6v2n6?autoplay=1\&amp;auto\_play=1">
+    <meta property="og:video:width" content="5000"> 
+    <meta property="og:video:height" content="3000">
 </head>
 <body>jreg peni</body>
 </html>
