--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>    
-    <meta property="og:image" content="https://github.com/RacimPog/sou/blob/main/TRUEharlow.gif">
+    <meta property="og:image" content="https://github.com/RacimPog/sou/blob/main/harlow.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://github.com/RacimPog/sou/blob/main/story%20of%20undertale.mp4">
+    <meta property="og:video:url" content="https://github.com/RacimPog/sou/blob/main/story%20of%20undertale%20(2).mp4">
     <meta property="og:video:width" content="190"> 
     <meta property="og:video:height" content="168">
 </head>
